<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    style="@style/ttl_style"
    android:text="@string/register_here"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/register_title"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        style="@style/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_name"
        android:text="@string/name_text"/>
    <EditText
        style="@style/register_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_field"
        android:inputType="textPersonName"
        android:hint="@string/name_field" />
    <TextView
        style="@style/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_email"
        android:text="@string/email_text"/>
    <EditText
        style="@style/register_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_field"
        android:inputType="textEmailAddress"
        android:hint="@string/email_field"/>
    <TextView
        style="@style/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_password"
        android:text="@string/password_text"/>
    <EditText
        style="@style/register_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_field"
        android:inputType="textPassword"
        android:hint="@string/password_field"/>
    <TextView
        style="@style/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_confirm_password"
        android:text="@string/password_confirm_text"/>
    <EditText
        style="@style/register_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_field"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_field"/>
    <TextView
        style="@style/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_phone_number"
        android:text="@string/phone_number_text"/>
    <EditText
        style="@style/register_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number_field"
        android:inputType="phone"
        android:maxLength="10"
        android:hint="@string/phone_number_field"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_type"
        android:layout_gravity="center"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/register_here"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Register"/>
    </LinearLayout>

</LinearLayout>