<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/logbg_theme"
    android:gravity="center"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/ttl_style"
        android:id="@+id/ttl"
        android:text="@string/ttl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        style="@style/loginputstyle"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_emaii"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        style="@style/loginputstyle"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
    <Button
        style="@style/btnstyle"
        android:onClick="LogInClick"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:textColor="#0000ff"
            android:onClick="RegisterClick"
            android:textSize="15dp"
            android:text="@string/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:textColor="#0000ff"
            android:onClick="ForgotPassword"
            android:textSize="15dp"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>